--- a/workspace/MJCompiler/build.xml
+++ b/workspace/MJCompiler/build.xml
@@ -69,7 +69,9 @@
 
 	<target name="runObj" depends="disasm">
 		<java classname="rs.etf.pp1.mj.runtime.Run">
-			<arg value="test/program.obj" />
+			<!--arg value="-debug" /-->
+			<arg value="test/test301.obj" />
+			<redirector input="test/console.txt"></redirector>
 			<classpath>
 				<pathelement location="lib/mj-runtime-1.1.jar" />
 			</classpath>
